fix: remove overflow-x hidden to solve layout issue

--- a/css/main.scss
+++ b/css/main.scss
@@ -12,7 +12,6 @@ html {
 /*Start Global Rules*/
 body {
 	font-family: "Roboto", sans-serif;
-	overflow-x: hidden;
 }
 
 .container {
